# debezium-check

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  build.sh
src/: main.rs
