[package]
name = "debezium_check"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.26", features = ["cmake-build", "ssl", "sasl", "libz", "zstd", "external-lz4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
clap = "3.0.0-beta.4"
